apps/forgejo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  labels:
    inject-ca-bundle: "true"
