apps/forgejo/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: forgejo
  hostnames:
    - git.tomerhanochi.com
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
