apps/forgejo/ssh-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: forgejo-ssh
  rules:
    - backendRefs:
        - name: forgejo-ssh
          port: 22
